--- a/style.css
+++ b/style.css
@@ -1,12 +1,58 @@
 :root {
-  --theme-primary: hsl(25, 97%, 53%);
+  --theme-orange: hsl(25, 97%, 53%);
+  --theme-lightgrey: hsl(217, 12%, 63%);
+  --theme-mediumgrey: hsl(216, 12%, 54%);
+  --theme-blue: hsl(213, 25%, 20%);
+  --theme-darkblue: hsl(213, 35%, 12%);
+  --theme-verydarkblue: hsl(216, 12%, 8%);
+  --main-height: 360px;
 }
 
 *, *::after, *::before {
   box-sizing: border-box;
+  border: none;
   margin: 0px;
+  padding: 0px;
   text-decoration: none;
+  list-style: none;
   font-family: 'Overpass';
+  font-weight: 400;
+  /* border: white dashed 1px; */
+}
+
+h1 {
+  font-size: 24px;
+  font-weight: 700px;
+}
+
+.submit {
+  background-color: var(--theme-orange);
+  height: 46px;
+  width: 100%;
+  border-radius: 23px;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 0.2em;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rating {
+  background-color: var(--theme-blue);
+  color: var(--theme-mediumgrey);
+  font-size: 14px;
+  font-weight: 700;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .attribution {
@@ -18,6 +64,37 @@
   color: hsl(228, 45%, 44%);
 }
 
+body {
+  background-color: var(--theme-verydarkblue);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+main {
+  width: 325px;
+  height: var(--main-height);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: max(25px, calc(100vh - var(--main-height))/2);
+  margin-bottom: max(25px, calc(100vh - var(--main-height))/2);
+  background-image: radial-gradient(circle at top, var(--theme-blue), var(--theme-darkblue));
+  padding: 25px;
+  padding-bottom: 35px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+ol {
+  display: flex;
+  justify-content: space-between;
+}
+
 p {
-  font-size: 15px;
+  font-size: 14px;
+  color: var(--theme-mediumgrey);
+  line-height: 1.5em;
 }
